--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
                 - PORT=${PORT}
         depends_on:
             - mongodb
+        extra_hosts:
+            - 'host.docker.internal:host-gateway'
         restart: unless-stopped
         env_file: .env
         ports:
